mono-tools (2.0-1) UNRELEASED; urgency=low

  * New upstream release

 -- David Paleino <d.paleino@gmail.com>  Sun, 23 Nov 2008 23:02:17 +0100

mono-tools (1.9-2) unstable; urgency=medium

  * debian/control:
    + Removed libgecko2.0-cil and libxul-dev from build-dependencies.
    + Added libwebkit1.0-cil to build-dependencies.
    + Replaced libnunit2.2.6-cil build-dependency with libmono-nunit2.2-cil.
    + Moved pseudo homepage field of gendarme to real field.
    + Added extra space to lists in package description to make them verbatim.
      (Closes: #480336, #480343)
  * debian/patches/05_webkit-sharp_port.dpatch:
    + Link against webkit-sharp instead of gecko-sharp (xulrunner).
      (patch taken from upstream SVN, Closes: #480811, #488674)
  * debian/patches/00list:
    + Disabled 01_use_real_nunit, linking now against libmono-nunit2.2-cil
      instead of libnunit2.2.6-cil. (Closes: #487037)
  * debian/gnunit(2).desktop
    debian/gnunit(2).install:
    + Desktop files for the freedesktop menu.
      (thanks goes to benoit tuduri <tuduri.benoit@freesurf.Fr> for the patch,
       Closes: #478962)

 -- Mirco Bauer <meebey@debian.org>  Sun, 10 Aug 2008 14:20:01 +0200

mono-tools (1.9-1) unstable; urgency=low

  [ Sebastian Dröge ]
  * New upstream release:
    + debian/patches/04_gnome-sharp.patch:
      - Dropped, merged upstream.
    + debian/patches/03_mozilla-home.dpatch:
      - Updated to apply cleanly again.

  [ Mirco Bauer ]
  * debian/rules:
    + Use dh_clifixperms instead of find commands.
    + Enhanced error handling of "make clean".
  * debian/control:
    + Added libmono1.0-cil >= 1.9.1 to build-deps.
    + Added libmono-system-web2.0-cil to build-deps as needed by gendarme.
    + Updated cli-common-dev build-dep to >= 0.5.4, as we are using
      dh_clistrip from it now.
  * debian/watch:
    + Updated
  * debian/mono-tools-gui.install:
    + Added gui-compare.
  * debian/mono-tools-devel.install:
    + Added gendarme.
